重新命名 server name
